# basespace-python-sdk-v2

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  .ruff.toml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  project.mk  pyproject.toml  setup.py  swagger-private-v2.json
.emgbuild/: .coveragerc  .pre-commit-config.yaml  .python-version  .ruff.toml  CONTRIBUTING.md  Makefile  README.md  infra.mk
bssh_sdk_2/: __init__.py  api_client.py  configuration.py  rest.py
docs/: AnalysisSettings.md  ApiAgreementCompact.md  AppSessionCompact.md  AppSessionIcaLogsStepListSortFieldsV2Paging.md  ApplicationMetadata.md  ApplicationMetadataV2ApiResponse.md  ApplicationScreenshots.md  ApplicationScreenshotsV2ApiResponse.md  BasespaceApi.md  ComputeStatistics.md  DateTimeOffset.md  GenomeCompact.md  IAppSessionCompact.md  IApplicationCompact.md  IBiologicalSampleCompact.md  IBiologicalSampleCompactList.md  ICollection.md  IDatasetCompact.md  IDictionary.md  IProjectCompact.md  IPropertyContainer.md  IUserCompact.md  IdFilesBody.md  IdFilesBody1.md  JContainer.md  JObject.md  JToken.md  JTokenEqualityComparer.md  Lane.md  LaneByRead.md  LibraryContainerCompact.md  LibraryIndexCompact.md  LibraryPrepKitCompact.md  LoggedInUser.md  MapContent.md  Metadatuple.md  NameAndId.md  OAuthV2AccessTokenRequest.md  OAuthV2AccessTokenResponse.md  Permissions.md  (+214 more)
swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
test/: test_analysis_settings.py  test_api_agreement_compact.py  test_app_session_compact.py  test_application_metadata.py  test_i_collection.py  (+249 more)
(+515 files in other folders)
